"Modified scrollbar. Solved position issue"

--- a/css/reset.css
+++ b/css/reset.css
@@ -10,3 +10,15 @@ body{
 	-webkit-font-smoothing:antialiased;
 	box-sizing: border-box;
 }
+
+/* Scroll bar */
+::-webkit-scrollbar{
+	width: 10px;
+}
+
+::-webkit-scrollbar-thumb{
+	border: 11px solid #c84b31;
+	background-clip: padding-box;
+	border-radius: 9999px;
+	background-color: #2d4263;
+}
